<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:background="@drawable/button_color_write"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/statement"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/color_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tiaoli"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tiaoli"
        android:layout_gravity="center"
        android:lineSpacingExtra="3dp"
        android:letterSpacing="0.3"
        android:textSize="@dimen/sp_12"
        android:textColor="#4e5864"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/tiaoli2"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/dp_2"
        android:textSize="@dimen/sp_10"
        android:textColor="#4e5864"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:paddingTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_clear"
            android:text="@string/exits"
            android:layout_gravity="center"
            android:background="@drawable/button_color_gray"
            android:textSize="@dimen/sp_13"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/dialog_affitte"
            android:textColor="#ffffff"
            android:text="@string/agree"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_gravity="center"
            android:background="@drawable/button_zhu_color"
            android:textSize="@dimen/sp_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>