<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <FrameLayout
        android:id="@+id/home_framentlayout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.zhuanle.zhuanle.view.LottieTabView
            android:id="@+id/tab_view_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon_normal="@drawable/icon_home"
            app:lottie_path="lottie_home.json"
            app:tab_name="@string/home"
            app:tab_selected="true"
            app:text_selected_color="@color/color_theme"
            app:text_size="@dimen/sp_14" />

        <com.zhuanle.zhuanle.view.LottieTabView
            android:id="@+id/tab_view_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon_normal="@drawable/icon_msg"
            app:lottie_path="lottie_msg.json"
            app:tab_name="@string/msg"
            app:tab_selected="false"
            app:text_selected_color="@color/color_theme"
            app:text_size="@dimen/sp_14" />


        <com.zhuanle.zhuanle.view.LottieTabView
            android:id="@+id/tab_view_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon_normal="@drawable/icon_user"
            app:lottie_path="lottie_user.json"
            app:tab_name="@string/my"
            app:tab_selected="false"
            app:text_selected_color="@color/color_theme"
            app:text_size="@dimen/sp_14" />
    </LinearLayout>


</LinearLayout>